--- a/test/fixtures/friends.yml
+++ b/test/fixtures/friends.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  frist_name: MyString
+  first_name: MyString
   last_name: MyString
   email: MyString
   phone: MyString
   twitter: MyString
 
 two:
-  frist_name: MyString
+  first_name: MyString
   last_name: MyString
   email: MyString
   phone: MyString
